--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -35,10 +35,11 @@
 
     <div class="row">
         <div class="col-lg-7 d-flex flex-column justify-content-center align-content-center ">
-            <h2 class="text-dark ">La organización y gastronomía son nuestra pasión. <span class="text-success ">Hacemos
+            <h2 class="text-dark p-1 px-3">La organización y gastronomía son nuestra pasión. <span
+                    class="text-success ">Hacemos
                     que su evento sea una experiencia única</span>
             </h2>
-            <p class="lead text-dark ">Tenemos el buffet o el menú recién hecho ideal para cualquier tipo de
+            <p class="lead text-dark  p-5">Tenemos el buffet o el menú recién hecho ideal para cualquier tipo de
                 evento y gusto.
                 Tanto si se trata de celebraciones de empresa, bodas, cumpleaños o cualquier otro tipo de evento,
                 sus deseos como cliente estarán siempre en primer lugar. Nuestro equipo cuenta con una dilatada
