--- a/src/styles.css
+++ b/src/styles.css
@@ -1,6 +1,7 @@
 /* You can add global styles to this file, and also import other style files */
 @import url(https://fonts.googleapis.com/css?family=Roboto:100,100italic,300,300italic,regular,italic,500,500italic,700,700italic,900,900italic);
 @import url(https://fonts.googleapis.com/css?family=Montserrat:100,200,300,regular,500,600,700,800,900,100italic,200italic,300italic,italic,500italic,600italic,700italic,800italic,900italic);
+@import url(https://fonts.googleapis.com/css?family=Merienda+One:regular);
 
 *{
     margin: 0 ;
@@ -20,8 +21,11 @@ body {
 		linear-gradient(rgb(22, 138, 7) (22px - 25px), transparent 1%) center,
 		rgb(13, 139, 13);
 	background-size: 22px 22px;
+        
 }
 
-.h3{
-    font-family: 'Montserrat';    
+p,ul, li, a, h1, h2{
+    font-family: 'Merienda One';
+    font-weight: 700;
 }
+
