--- a/src/app/components/horarios/horarios.component.html
+++ b/src/app/components/horarios/horarios.component.html
@@ -1,1 +1,9 @@
-<p>horarios works!</p>
+<div class="container logofondo">
+
+</div>
+<div class="mt-5 pt-5">
+    <p class="text-center mt-5 pt-5">TLF. Reservas: 956689072</p>
+    <p class="text-center mt-5 pt-5">MARTES A SÁBADOS : 09:00 A 23:00 HORAS</p>
+    <P class="text-center mb-5">DOMINGO: 9:00 A 17:00 HORAS</P>
+
+</div>
