--- a/src/app/components/info/info.component.html
+++ b/src/app/components/info/info.component.html
@@ -1,1 +1,12 @@
-<p>info works!</p>
+<div class="container text-center mt-4">
+    <h3 class="text-primary">El Olivo: el esplendor de Tarifa</h3>
+    <p class="text-italic text-muted">"Tarifa, allá en el sur total de los vientos y las fronteras, es un lugar donde
+        todo te
+        invita a vivir de otra
+        manera. Muy cerca de Tarifa está...."</p>
+    <img class="my-2"
+        src="https://imagenes.eldebate.com/files/main_image/files/fp/uploads/2022/01/28/61f3df0655b05.r_d.495-132-10000.jpeg"
+        alt="Imagen aparcamiento">
+    <a href="https://www.eldebate.com/estilo-vida/restaurantes/20220128/olivo-esplendor-tarifa.html" target="_blank"
+        rel="noopener noreferrer" class="my-2"> Ver el articulo</a>
+</div>
