--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -35,5 +35,5 @@
 
 <!-- FOOTER -->
 <footer class="container d-flex pt-3">
-  <p class="text-success">&copy; 2022 Restaurante El Olivo &middot; Author: JMMR</p>
+  <p class="text-success text-start">&copy; 2022 Restaurante El Olivo &middot; Author: JMMR</p>
 </footer>
