--- a/src/app/components/carta/carta.component.html
+++ b/src/app/components/carta/carta.component.html
@@ -1,7 +1,7 @@
 <div class="container pt-3" id="carta">
     <div class="row p-2">
-        <p class="text-primary p-0 m-0">Menú del día (1 Agua, pan y postre) 15€</p>
-        <p class="text-muted fs-6 p-0">Excepto Sábados, Domingos y festivos</p>
+        <p class="text-center text-primary p-0 m-0">Menú del día (1 Agua, pan y postre) 15€</p>
+        <p class="text-center text-muted fs-6 p-0">Excepto Sábados, Domingos y festivos</p>
     </div>
     <div class="row p-2">
         <div class="col-6 col-md-4 text-center" *ngFor="let carta of cartaItems; ">
