HOTFIX - PNG converted to JPG to improve performance.

--- a/src/app/components/alergeno/alergeno.component.html
+++ b/src/app/components/alergeno/alergeno.component.html
@@ -1,2 +1,2 @@
-<div *ngIf="tipoAlergeno!=0" [ngStyle]="{'background-image':'url(\'/assets/alergenos/'+ tipoAlergeno + '.png\')'  }">
+<div *ngIf="tipoAlergeno!=0" [ngStyle]="{'background-image':'url(\'/assets/alergenos/'+ tipoAlergeno + '.jpg\')'  }">
 </div>
