--- a/src/app/components/home/home.component.css
+++ b/src/app/components/home/home.component.css
@@ -1,30 +1,30 @@
-.imagecustomized{
-    height: 300px;
-    width: 100%;
-    background-image: url('/assets/coles.png');
-    background-position: center center;
-    background-repeat: no-repeat;
-    background-size: cover;
+.imagecustomized {
+  height: 300px;
+  width: 100%;
+  background-image: url('/assets/coles.jpg');
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
 }
 
-.imagecustomized2{
-    height: 300px;
-    width: 100%;
-    background-image: url('/assets/asador.png');
-    background-position: center center;
-    background-repeat: no-repeat;
-    background-size: cover;
+.imagecustomized2 {
+  height: 300px;
+  width: 100%;
+  background-image: url('/assets/asador.jpg');
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
 }
 
-.imagecustomized3{
-    height: 300px;
-    width: 100%;
-    background-image: url('/assets/carnes.jpg');
-    background-position: center center;
-    background-repeat: no-repeat;
-    background-size: cover;    
+.imagecustomized3 {
+  height: 300px;
+  width: 100%;
+  background-image: url('/assets/carnes.jpg');
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
 }
 
-.shadowedtext{
-    text-shadow: 1px 2px 2px white,  1px 1px 5px white;
+.shadowedtext {
+  text-shadow: 1px 2px 2px white, 1px 1px 5px white;
 }
