--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -1,58 +1,57 @@
 <div class="container-fluid p-0 ">
 
-    <div id="carouselControls" class="carousel slide " data-bs-ride="carousel">
-        <div class="carousel-inner w-100">
-            <div class="imagecustomized carousel-item active">
-                <div class="carousel-caption text-center ">
-                    <h1>Comida tradicional.</h1>
-                    <p>"Disfrute de nuestros platos caseros."</p>
-                </div>
-            </div>
-            <div class="imagecustomized2 carousel-item">
-                <div class="carousel-caption text-center ">
-                    <h1>Asador tradicional.</h1>
-                    <p>"Asados de cordero y cabrito en horno de leña."</p>
-                </div>
-            </div>
-            <div class="imagecustomized3 carousel-item">
-                <div class="carousel-caption text-center ">
-                    <h1 class="text-dark shadowedtext">Carnes de Retinto</h1>
-                    <p class="text-dark shadowedtext ">"Deguste nuestras carnes a la parrilla"</p>
-                </div>
-            </div>
+  <div id="carouselControls" class="carousel slide " data-bs-ride="carousel">
+    <div class="carousel-inner w-100">
+      <div class="imagecustomized carousel-item active">
+        <div class="carousel-caption text-center ">
+          <h2>Comida tradicional.</h2>
+          <p>"Disfrute de nuestros platos caseros."</p>
         </div>
-        <button class="carousel-control-prev" type="button" data-bs-target="#carouselControls" data-bs-slide="prev">
-            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-            <span class="visually-hidden">Previous</span>
-        </button>
-        <button class="carousel-control-next" type="button" data-bs-target="#carouselControls" data-bs-slide="next">
-            <span class="carousel-control-next-icon" aria-hidden="true"></span>
-            <span class="visually-hidden">Next</span>
-        </button>
+      </div>
+      <div class="imagecustomized2 carousel-item">
+        <div class="carousel-caption text-center ">
+          <h2>Asador tradicional.</h2>
+          <p>"Asados de cordero y cabrito en horno de leña."</p>
+        </div>
+      </div>
+      <div class="imagecustomized3 carousel-item">
+        <div class="carousel-caption text-center ">
+          <h2 class="text-dark shadowedtext">Carnes de Retinto</h2>
+          <p class="text-dark shadowedtext ">"Deguste nuestras carnes a la parrilla"</p>
+        </div>
+      </div>
     </div>
+    <button class="carousel-control-prev" type="button" data-bs-target="#carouselControls" data-bs-slide="prev">
+      <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+      <span class="visually-hidden">Previous</span>
+    </button>
+    <button class="carousel-control-next" type="button" data-bs-target="#carouselControls" data-bs-slide="next">
+      <span class="carousel-control-next-icon" aria-hidden="true"></span>
+      <span class="visually-hidden">Next</span>
+    </button>
+  </div>
 
-    <carta></carta>
+  <carta></carta>
 
-    <div class="row">
-        <div class="col-lg-7 d-flex flex-column justify-content-center align-content-center ">
-            <h2 class="text-dark p-1 px-3">La organización y gastronomía son nuestra pasión. <span
-                    class="text-success ">Hacemos
-                    que su evento sea una experiencia única</span>
-            </h2>
-            <p class="lead text-dark  p-5">Tenemos el buffet o el menú recién hecho ideal para cualquier tipo de
-                evento y gusto.
-                Tanto si se trata de celebraciones de empresa, bodas, cumpleaños o cualquier otro tipo de evento,
-                sus deseos como cliente estarán siempre en primer lugar. Nuestro equipo cuenta con una dilatada
-                experiencia que garantiza
-                productos de alta calidad,
-                así como una presentación perfecta. Todos nuestros platos son caseros y se cocinan específicamente para
-                su
-                evento.
-                Si lo desea puede probar los platos o menús que desee, solo es necesario que concierte una cita.</p>
-        </div>
-        <div class="col-lg-5 d-flex flex-column justify-content-center align-content-center">
-            <img src="/assets/langosBoda.png" alt="Langostinos" class="img-thumbnail d-block m-auto" width="480"
-                height="320">
-        </div>
+  <div class="row">
+    <div class="col-lg-7 d-flex flex-column justify-content-center align-content-center ">
+      <h2 class="text-dark p-1 px-3">La organización y gastronomía son nuestra pasión. <span
+          class="text-success ">Hacemos
+          que su evento sea una experiencia única</span>
+      </h2>
+      <p class="lead text-dark  p-5">Tenemos el buffet o el menú recién hecho ideal para cualquier tipo de
+        evento y gusto.
+        Tanto si se trata de celebraciones de empresa, bodas, cumpleaños o cualquier otro tipo de evento,
+        sus deseos como cliente estarán siempre en primer lugar. Nuestro equipo cuenta con una dilatada
+        experiencia que garantiza
+        productos de alta calidad,
+        así como una presentación perfecta. Todos nuestros platos son caseros y se cocinan específicamente para
+        su
+        evento.
+        Si lo desea puede probar los platos o menús que desee, solo es necesario que concierte una cita.</p>
     </div>
+    <div class="col-lg-5 d-flex flex-column justify-content-center align-content-center">
+      <img src="/assets/langosBoda.jpg" alt="Langostinos" class="img-thumbnail d-block m-auto" width="480" height="320">
+    </div>
+  </div>
 </div>
