HOTFIX - Alergenos hotfix, img ngSrc feature added to the project

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,7 @@
 <!-- HEADER -->
 <header>
-  <nav class="navbar navbar-expand-lg navbar-light bg-light">
-    <div class="container-fluid">
+  <div class="container-fluid p-0">
+    <nav class="navbar navbar-expand-lg navbar-light bg-light w-100 px-1">
       <button class="navbar-toggler text-white" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
         aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon text-white"></span>
@@ -26,13 +26,13 @@
           </li>
         </ul>
       </div>
-    </div>
-  </nav>
+    </nav>
+  </div>
 </header>
 
 <router-outlet></router-outlet>
 
 <!-- FOOTER -->
-<footer class="container d-flex pt-3">
-  <p class="text-success text-start">&copy; 2022 Restaurante El Olivo &middot; Author: JMMR</p>
+<footer class="container pt-3">
+  <p class="text-success text-start">&copy; 2023 Restaurante El Olivo &middot; Autor: JMMR</p>
 </footer>
