--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -2,22 +2,25 @@
 
   <div id="carouselControls" class="carousel slide " data-bs-ride="carousel">
     <div class="carousel-inner w-100">
-      <div class="imagecustomized carousel-item active">
+      <div class="carousel-item active">
+        <img ngSrc="/assets/chuleton_high.gif" alt="Chuletón a la parrilla" fill priority>
         <div class="carousel-caption text-center ">
-          <h2>Comida tradicional.</h2>
-          <p>"Disfrute de nuestros platos caseros."</p>
+          <h2 class="text-dark shadowedtext">Carnes de Retinto</h2>
+          <p class="text-dark shadowedtext ">"Deguste nuestras carnes a la parrilla"</p>
         </div>
       </div>
       <div class="imagecustomized2 carousel-item">
+        <img ngSrc="/assets/asador2.jpg" alt="Chuletón a la parrilla" fill>
         <div class="carousel-caption text-center ">
           <h2>Asador tradicional.</h2>
           <p>"Asados de cordero y cabrito en horno de leña."</p>
         </div>
       </div>
       <div class="imagecustomized3 carousel-item">
+        <img ngSrc="/assets/coles.jpg" alt="Chuletón a la parrilla" fill>
         <div class="carousel-caption text-center ">
-          <h2 class="text-dark shadowedtext">Carnes de Retinto</h2>
-          <p class="text-dark shadowedtext ">"Deguste nuestras carnes a la parrilla"</p>
+          <h2>Comida tradicional.</h2>
+          <p>"Disfrute de nuestros platos caseros."</p>
         </div>
       </div>
     </div>
@@ -33,13 +36,13 @@
 
   <carta></carta>
 
-  <div class="row">
+  <div class="text-center d-flex flex-column justify-content-center align-items-center">
     <div class="col-lg-7 d-flex flex-column justify-content-center align-content-center ">
       <h2 class="text-dark p-1 px-3">La organización y gastronomía son nuestra pasión. <span
           class="text-success ">Hacemos
           que su evento sea una experiencia única</span>
       </h2>
-      <p class="lead text-dark  p-5">Tenemos el buffet o el menú recién hecho ideal para cualquier tipo de
+      <p class="lead text-dark p-5 text-center">Tenemos el buffet o el menú recién hecho ideal para cualquier tipo de
         evento y gusto.
         Tanto si se trata de celebraciones de empresa, bodas, cumpleaños o cualquier otro tipo de evento,
         sus deseos como cliente estarán siempre en primer lugar. Nuestro equipo cuenta con una dilatada
@@ -51,7 +54,8 @@
         Si lo desea puede probar los platos o menús que desee, solo es necesario que concierte una cita.</p>
     </div>
     <div class="col-lg-5 d-flex flex-column justify-content-center align-content-center">
-      <img src="/assets/langosBoda.jpg" alt="Langostinos" class="img-thumbnail d-block m-auto" width="480" height="320">
+      <img ngSrc="/assets/langosBoda.jpg" alt="Langostinos" class="img-thumbnail d-block m-auto" width="568"
+        height="320">
     </div>
   </div>
 </div>
