FEATURE - Translations working english and spanish, need to populeta the jsons

--- a/src/app/components/carta-detalle/carta-detalle.component.html
+++ b/src/app/components/carta-detalle/carta-detalle.component.html
@@ -1,55 +1,55 @@
 <div class="container-fluid container-md shadowed border py-3"
-    *ngIf="cartaAMostrar!='Vinos' && cartaAMostrar!='Alergenos'">
-    <div class="row border shadow" *ngFor="let plato of lista; let index=index;" (click)="toggler()">
-        <p class="col-6 p-1 py-3 d-flex flex-column justify-content-center align-items-start"
-            [ngClass]="{'text-primary': index==0, 'text-dark': index!=0}">
-            {{plato.nombre}}</p>
-        <ng-container *ngIf="plato.precioMedia!='X'; else elseBlock">
-            <p class="col-3 d-flex flex-column justify-content-center align-items-center p-1"
-                [ngClass]="{'text-primary': index==0, 'text-dark': index!=0}">
-                <strong>{{plato.precioMedia}}€</strong>
-            </p>
-            <p class="col-3 d-flex flex-column justify-content-center align-items-center p-1 pe-3"
-                [ngClass]="{'text-primary': index==0, 'text-dark': index!=0}">
-                <strong>{{plato.precioEntera}}€</strong>
-            </p>
-        </ng-container>
-        <ng-template #elseBlock>
-            <p class="col-6 d-flex flex-column justify-content-center align-items-end p-1 pe-2 text-end">
-                <strong>{{plato.precioEntera}}€</strong>
-            </p>
-        </ng-template>
-        <div class="col-12 py-3" [ngClass]="{'d-block': toggle, 'd-none':!toggle}">
-            <div class="col-12 py-3 justify-content-center align-items-center d-flex ">
-                <alergeno [tipoAlergeno]="alergeno" *ngFor="let alergeno of plato.alergenos"></alergeno>
-            </div>
-            <p *ngIf="plato.precioMedia=='X' && plato.nombre" class="text-center ps-2 text-muted fuenteTamanio"> Solo
-                raciones
-                completas</p>
-        </div>
+  *ngIf="cartaAMostrar!='Vinos' && cartaAMostrar!='Alergenos'">
+  <div class="row border shadow" *ngFor="let plato of lista; let index=index;" (click)="toggler()">
+    <p class="col-6 p-1 py-3 d-flex flex-column justify-content-center align-items-start"
+      [ngClass]="{'text-primary': index==0, 'text-dark': index!=0}">
+      {{plato.nombre | translate}}</p>
+    <ng-container *ngIf="plato.precioMedia!='X'; else elseBlock">
+      <p class="col-3 d-flex flex-column justify-content-center align-items-center p-1"
+        [ngClass]="{'text-primary': index==0, 'text-dark': index!=0}">
+        <strong>{{plato.precioMedia}}€</strong>
+      </p>
+      <p class="col-3 d-flex flex-column justify-content-center align-items-center p-1 pe-3"
+        [ngClass]="{'text-primary': index==0, 'text-dark': index!=0}">
+        <strong>{{plato.precioEntera}}€</strong>
+      </p>
+    </ng-container>
+    <ng-template #elseBlock>
+      <p class="col-6 d-flex flex-column justify-content-center align-items-end p-1 pe-2 text-end">
+        <strong>{{plato.precioEntera}}€</strong>
+      </p>
+    </ng-template>
+    <div class="col-12 py-3" [ngClass]="{'d-block': toggle, 'd-none':!toggle}">
+      <div class="col-12 py-3 justify-content-center align-items-center d-flex ">
+        <alergeno [tipoAlergeno]="alergeno" *ngFor="let alergeno of plato.alergenos"></alergeno>
+      </div>
+      <p *ngIf="plato.precioMedia=='X' && plato.nombre" class="text-center ps-2 text-muted fuenteTamanio"> Solo
+        raciones
+        completas</p>
     </div>
+  </div>
 </div>
 <div class="container-fluid container-md shadowed border py-3" *ngIf="cartaAMostrar=='Vinos'">
-    <div class="selectorDenominacion py-2">
-        <select class="form-select" aria-label="Default select example" (change)="selectDenominacion($event)">
-            <option value='' selected>Todos los vinos</option>
-            <option [value]="denominacion" *ngFor="let denominacion of listaDenominaciones">{{denominacion}}</option>
-        </select>
+  <div class="selectorDenominacion py-2">
+    <select class="form-select" aria-label="Default select example" (change)="selectDenominacion($event)">
+      <option value='' selected>Todos los vinos</option>
+      <option [value]="denominacion" *ngFor="let denominacion of listaDenominaciones">{{denominacion}}</option>
+    </select>
+  </div>
+  <div class="row border shadow" *ngFor="let vino of listaVinos let index=index" (click)="toggler()">
+    <p class="col-9 text-dark p-1 py-3 d-flex flex-column justify-content-center align-items-start">
+      {{vino.nombre}}</p>
+    <p class="col-3 d-flex flex-column justify-content-center align-items-center p-1 pe-3">
+      <strong>{{vino.precio | number:'2.2-2'}}€</strong>
+    </p>
+    <div class="col-12 py-3" [ngClass]="{'d-block': toggle, 'd-none':!toggle}">
+      <div class="col-12 py-3 justify-content-center align-items-center d-flex ">
+        <alergeno [tipoAlergeno]="alergeno" *ngFor="let alergeno of vino.alergenos"></alergeno>
+      </div>
+      <p>{{'Denominación: ' +vino.denominacion}}</p>
     </div>
-    <div class="row border shadow" *ngFor="let vino of listaVinos let index=index" (click)="toggler()">
-        <p class="col-9 text-dark p-1 py-3 d-flex flex-column justify-content-center align-items-start">
-            {{vino.nombre}}</p>
-        <p class="col-3 d-flex flex-column justify-content-center align-items-center p-1 pe-3">
-            <strong>{{vino.precio | number:'2.2-2'}}€</strong>
-        </p>
-        <div class="col-12 py-3" [ngClass]="{'d-block': toggle, 'd-none':!toggle}">
-            <div class="col-12 py-3 justify-content-center align-items-center d-flex ">
-                <alergeno [tipoAlergeno]="alergeno" *ngFor="let alergeno of vino.alergenos"></alergeno>
-            </div>
-            <p>{{'Denominación: ' +vino.denominacion}}</p>
-        </div>
-    </div>
+  </div>
 </div>
 <div *ngIf="cartaAMostrar=='Alergenos'">
-    <app-alergenos></app-alergenos>
+  <app-alergenos></app-alergenos>
 </div>
