--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -27,6 +27,7 @@
           <li class="nav-item">
             <select (change)="chooseLang($event)">
               <option value="es">Español</option>
+              <option value="en">English</option>
             </select>
           </li>
         </ul>
