FEATURE - Localization/Translations to several languages using i18n internalization

--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -5,22 +5,22 @@
       <div class="carousel-item active">
         <img ngSrc="/assets/chuleton_high.gif" alt="Chuletón a la parrilla" fill priority>
         <div class="carousel-caption text-center ">
-          <h2 class="text-dark shadowedtext">Carnes de Retinto</h2>
-          <p class="text-dark shadowedtext ">"Deguste nuestras carnes a la parrilla"</p>
+          <h2 class="text-dark shadowedtext" translate>hero.carnes</h2>
+          <p class="text-dark shadowedtext " translate>hero.carnes_description</p>
         </div>
       </div>
       <div class="imagecustomized2 carousel-item">
         <img ngSrc="/assets/asador2.jpg" alt="Chuletón a la parrilla" fill>
         <div class="carousel-caption text-center ">
-          <h2>Asador tradicional.</h2>
-          <p>"Asados de cordero y cabrito en horno de leña."</p>
+          <h2 translate>hero.asador</h2>
+          <p translate>hero.asador_description</p>
         </div>
       </div>
       <div class="imagecustomized3 carousel-item">
         <img ngSrc="/assets/coles.jpg" alt="Chuletón a la parrilla" fill>
         <div class="carousel-caption text-center ">
-          <h2>Comida tradicional.</h2>
-          <p>"Disfrute de nuestros platos caseros."</p>
+          <h2 translate>hero.tradicional</h2>
+          <p translate>hero.tradicional_description</p>
         </div>
       </div>
     </div>
@@ -38,20 +38,10 @@
 
   <div class="text-center d-flex flex-column justify-content-center align-items-center">
     <div class="col-lg-7 d-flex flex-column justify-content-center align-content-center ">
-      <h2 class="text-dark p-1 px-3">La organización y gastronomía son nuestra pasión. <span
-          class="text-success ">Hacemos
-          que su evento sea una experiencia única</span>
+      <h2 class="text-dark p-1 px-3" translate>org_msg1
+        <span class="text-success" translate>org_msg2</span>
       </h2>
-      <p class="lead text-dark p-5 text-center">Tenemos el buffet o el menú recién hecho ideal para cualquier tipo de
-        evento y gusto.
-        Tanto si se trata de celebraciones de empresa, bodas, cumpleaños o cualquier otro tipo de evento,
-        sus deseos como cliente estarán siempre en primer lugar. Nuestro equipo cuenta con una dilatada
-        experiencia que garantiza
-        productos de alta calidad,
-        así como una presentación perfecta. Todos nuestros platos son caseros y se cocinan específicamente para
-        su
-        evento.
-        Si lo desea puede probar los platos o menús que desee, solo es necesario que concierte una cita.</p>
+      <p class="lead text-dark p-5 text-center" translate>org_msg3</p>
     </div>
     <div class="col-lg-5 d-flex flex-column justify-content-center align-content-center">
       <img ngSrc="/assets/langosBoda.jpg" alt="Langostinos" class="img-thumbnail d-block m-auto" width="568"
