--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -1,14 +1,31 @@
-img{
-    height: 32px;
-    width: 32px;
+img {
+  height: 32px;
+  width: 32px;
 }
 
-.navbar{
-    background: #093028;  /* fallback for old browsers */
-    background: -webkit-linear-gradient(to right, #237A57, #093028);  /* Chrome 10-25, Safari 5.1-6 */
-    background: linear-gradient(to right, #237A57, #093028); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+.navbar {
+  background: #093028;
+  /* fallback for old browsers */
+  background: -webkit-linear-gradient(to right, #237A57, #093028);
+  /* Chrome 10-25, Safari 5.1-6 */
+  background: linear-gradient(to right, #237A57, #093028);
+  /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
 }
 
-.nav-link{
-    color: white !important;
+.nav-link {
+  color: white !important;
+}
+
+select {
+  background-color: transparent;
+  color: white;
+  border-radius: 0.5rem;
+  border-color: white;
+}
+
+select option {
+  margin: 40px;
+  background: #093028;
+  color: #f1eded;
+  text-shadow: 0 1px 0 black;
 }
