--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -13,25 +13,26 @@
       <div class="collapse navbar-collapse" id="navbarNav">
         <ul class="navbar-nav">
           <li class="nav-item">
-            <a class="nav-link active" [routerLink]="['/home']">Inicio</a>
+            <a class="nav-link active" [routerLink]="['/home']" translate>main.home</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link " aria-current="page" [routerLink]="['/carta']">Carta</a>
+            <a class="nav-link " aria-current="page" [routerLink]="['/carta']" translate>main.carta</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" [routerLink]="['/horario']">Horario</a>
+            <a class="nav-link" [routerLink]="['/horario']" translate>main.horario</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" [routerLink]="['/info']">Información</a>
-          </li>
-          <li class="nav-item">
-            <select (change)="chooseLang($event)">
-              <option value="es">Español</option>
-              <option value="en">English</option>
-            </select>
+            <a class="nav-link" [routerLink]="['/info']" translate>main.info</a>
           </li>
         </ul>
       </div>
+      <select (change)="chooseLang($event)">
+        <option value="es">🇪🇸</option>
+        <option value="en">🇪n</option>
+        <option value="de">🇩🇪</option>
+        <option value="pl">🇵🇱</option>
+        <option value="ja">日本</option>
+      </select>
     </nav>
   </div>
 </header>
