--- a/src/app/components/carta/carta.component.html
+++ b/src/app/components/carta/carta.component.html
@@ -5,24 +5,24 @@
         <img [routerLink]="['/carta/', carta.label]" [ngSrc]="'/assets/'+ carta.img" [alt]="carta.label" fill>
       </div>
       <p class="h3 text-center text-dark shadowtextcustom pointered" [routerLink]="['/carta/', carta.label]">
-        {{carta.label}}</p>
+        {{ 'menu.'+carta.label |translate }}
+      </p>
     </div>
   </div>
 
   <hr class="featurette-divider w-100 p-0">
 
   <div class="row p-2">
-    <p class="text-center text-primary p-0 m-0">Menú del día (1 Agua, pan y postre) 15€</p>
-    <p class="text-center text-muted fs-6 p-0">Excepto Sábados, Domingos y festivos</p>
+    <p class="text-center text-primary p-0 m-0" translate>menu_dia</p>
+    <p class="text-center text-muted fs-6 p-0" translate>menu_dia_horario</p>
   </div>
 
   <hr class="featurette-divider">
 
-  <p class=" text-center text-primary">Servicio de mesa, pan y aceitunas 1€ por persona.</p>
-  <p class=" text-center text-primary">Cover charge, bread and Olives 1€ per customer.</p>
+  <p class=" text-center text-primary" translate>pan_picos</p>
 
   <!-- START THE FEATURETTES -->
   <hr class="featurette-divider">
-  <hr class="featurette-divider">
+
 
 </div>
