HOTFIX - Hotfixed initial loading stress

--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -2,14 +2,14 @@
 
   <div id="carouselControls" class="carousel slide " data-bs-ride="carousel">
     <div class="carousel-inner w-100">
-      <div class="carousel-item active">
-        <img ngSrc="/assets/chuleton_high.gif" alt="Chuletón a la parrilla" fill priority>
+      <div class="carousel-item ">
+        <img ngSrc="/assets/chuleton_mid.gif" alt="Chuletón a la parrilla" fill priority>
         <div class="carousel-caption text-center ">
           <h2 class="text-dark shadowedtext" translate>hero.carnes</h2>
           <p class="text-dark shadowedtext " translate>hero.carnes_description</p>
         </div>
       </div>
-      <div class="imagecustomized2 carousel-item">
+      <div class="imagecustomized2 carousel-item active">
         <img ngSrc="/assets/asador2.jpg" alt="Chuletón a la parrilla" fill>
         <div class="carousel-caption text-center ">
           <h2 translate>hero.asador</h2>
