EMOJIS - Added emojis to the select for languages

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -28,10 +28,10 @@
       </div>
       <select (change)="chooseLang($event)">
         <option value="es">🇪🇸</option>
-        <option value="en">🇪n</option>
+        <option value="en">🇬🇧</option>
         <option value="de">🇩🇪</option>
         <option value="pl">🇵🇱</option>
-        <option value="ja">日本</option>
+        <option value="ja">🇯🇵</option>
       </select>
     </nav>
   </div>
