Changed .gif for mp4 video for the Hero. Image size shinkring

--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -3,7 +3,10 @@
   <div id="carouselControls" class="carousel slide " data-bs-ride="carousel">
     <div class="carousel-inner w-100">
       <div class="carousel-item ">
-        <img ngSrc="/assets/chuleton_mid.gif" alt="Chuletón a la parrilla" fill priority>
+        <!-- <img ngSrc="/assets/chuleton_mid.gif" alt="Chuletón a la parrilla" fill priority> -->
+        <video width="100%" height="100%" style="object-fit: fill;" src="/assets/chuleton.mp4" autoplay loop muted>
+
+        </video>
         <div class="carousel-caption text-center ">
           <h2 class="text-dark shadowedtext" translate>hero.carnes</h2>
           <p class="text-dark shadowedtext " translate>hero.carnes_description</p>
