FEATURE - Ahora el pdf generado esta formateado de manera correcta y se ha estilizado la forma en la que se crea.

--- a/src/app/components/carta-detalle/carta-detalle.component.html
+++ b/src/app/components/carta-detalle/carta-detalle.component.html
@@ -55,4 +55,6 @@
   </div>
 </main>
 
-<img src="assets\icons\pdf.svg" alt="Descargar a PDF" (click)="convertToPdf()">
+<!-- Botón para descargar carta a pdf -->
+<img src="assets\icons\pdf.svg" alt="Descargar a PDF"
+  (click)="cartaAMostrar==='Vinos' ? beautyWinesPDF() : beautyPDF() ">
